--- a/css/base.css
+++ b/css/base.css
@@ -102,6 +102,11 @@ table {
 	margin: 0 auto;
 }
 
+.content_container_no_flex {
+	max-width: 960px;
+	margin: 0 auto;
+}
+
 @media screen and (max-width: 900px) {
 
 	.content_container {
