--- a/team/team.css
+++ b/team/team.css
@@ -3,7 +3,7 @@
 	HEADER
 ***********************/
 
-.team_header {
+.team_page_section_header {
 	font-size: 30px;
 	font-weight: 300;
 	width: 100%;
@@ -69,6 +69,108 @@
 .team_member_position {
 	font-weight: 300;
 }
+
+/********************
+	CONTACT
+********************/
+
+* {
+	margin: 0;
+	padding: 0;
+}
+
+p {
+	font-size: 1.3em;
+	margin-bottom: 15px;
+}
+
+#page-wrap {
+	width: 660px;
+	background: white;
+	padding: 20px 50px 20px 50px;
+	margin: 0px auto;
+	height: auto !important;
+	margin-top: 20px;
+	font-size: 62.5%;
+	border-radius: 5px;
+	margin-bottom: 40px;
+}
+
+#contact-area {
+	width: 600px;
+	margin-top: 25px;
+}
+
+#contact-area input, #contact-area textarea {
+	padding: 5px;
+	width: 471px;
+	font-family: Helvetica, sans-serif;
+	font-size: 1.4em;
+	margin: 0px 0px 10px 0px;
+	border: 2px solid #ccc;
+}
+
+#contact-area textarea {
+	height: 90px;
+}
+
+#contact-area textarea:focus, #contact-area input:focus {
+	border: 2px solid #cd2879;
+}
+
+#contact-area input.submit-button {
+	width: 100px;
+	float: right;
+	cursor: pointer;
+	cursor: hand;
+	color: white;
+	background-color: #cd2879;
+}
+
+#contact-area input.submit-button:hover {
+	color: #cd2879;
+	background-color: white;
+}
+
+label {
+	float: left;
+	text-align: right;
+	margin-right: 15px;
+	width: 100px;
+	padding-top: 5px;
+	font-size: 1.4em;
+}
+
+.contact_header {
+	font-size: 30px;
+}
+
+@media screen and (max-width: 900px) { 
+	
+	#page-wrap {
+		width: 96%;
+		padding-left: 3%;
+		padding-right: 1%;
+	}
+
+	#contact-area {
+		width: 100%;
+	}
+
+	#contact-area input, #contact-area textarea {
+		width: 90%;
+	}
+
+	label {
+		text-align: left;
+	}
+
+	#contact-area input.submit-button {
+		margin-right: 25px;
+		height: 50px;
+	}
+}
+
 
 
 
