--- a/testing/testing.css
+++ b/testing/testing.css
@@ -57,3 +57,53 @@
     max-width: 960px;
     margin: 0 auto;
 }
+
+.clinic_graph {
+	margin-top: 30px;
+	height: 200px;
+	width: 100%;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+/********************
+	HEADERS
+*********************/
+
+.quick_test_clinic_header {
+	margin-bottom: 30px;
+	margin-top: 30px;
+}
+
+.normal_test_clinic_header {
+	margin-bottom: 30px;
+	margin-top: 15px;
+}
+
+.testing_header_container {
+	max-width: 960px;
+    margin: 0 auto;
+}
+
+.test_intro_header {
+	width: 80%;
+	margin: 0 auto;
+	text-align: center;
+
+	color: rgb(70, 70, 70);
+	font-weight: 400;
+	font-size: 17px;
+
+	margin-bottom: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
